--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@radix-ui/react-icons": "^1.3.2",
 		"accept-language": "^3.0.20",
+		"class-variance-authority": "^0.7.1",
 		"classnames": "^2.5.1",
 		"i18next": "^24.2.3",
 		"i18next-resources-to-backend": "^1.2.1",
