--- a/package.json
+++ b/package.json
@@ -1,36 +1,57 @@
 {
-	"name": "commerce",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@radix-ui/react-icons": "^1.3.2",
-		"accept-language": "^3.0.20",
-		"class-variance-authority": "^0.7.1",
-		"classnames": "^2.5.1",
-		"i18next": "^24.2.3",
-		"i18next-resources-to-backend": "^1.2.1",
-		"next": "^15.3.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.1.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/postcss": "^4",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"biome": "^0.3.3",
-		"tailwindcss": "^4",
-		"typescript": "^5"
-	},
-	"engines": {
-		"yarn": ">=1.22.0"
-	}
+  "name": "commerce",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "accept-language": "^3.0.20",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
+    "i18next": "^24.2.3",
+    "i18next-resources-to-backend": "^1.2.1",
+    "next": "^15.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.1.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@chromatic-com/storybook": "^3",
+    "@storybook/addon-a11y": "^8.6.12",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/experimental-nextjs-vite": "8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@storybook/testing-library": "^0.2.2",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vitest/browser": "^3.1.1",
+    "@vitest/coverage-v8": "^3.1.1",
+    "biome": "^0.3.3",
+    "chromatic": "^11.28.0",
+    "playwright": "^1.51.1",
+    "storybook": "^8.6.12",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "^3.1.1"
+  },
+  "engines": {
+    "yarn": ">=1.22.0"
+  }
 }
